<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">
    <TextView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beri_rating_pop_up"
        android:textSize="24sp"
        android:id="@+id/tv_give_rating"
        android:textColor="@android:color/black"
        />


    <RadioGroup
        android:id="@+id/rg_rating"
        android:layout_below="@+id/tv_give_rating"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/rb_rating1"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/rating_1"/>
        <RadioButton
            android:id="@+id/rb_rating2"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/rating_2"/>
        <RadioButton
            android:id="@+id/rb_rating3"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/rating_3"/>
        <RadioButton
            android:id="@+id/rb_rating4"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/rating_4"/>
        <RadioButton
            android:id="@+id/rb_rating5"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/rating_5"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_rating"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_rate_course"
        android:text="@string/rate_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_green_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_rating"
        android:layout_toStartOf="@+id/btn_rate_course"
        android:id="@+id/btn_cancle"
        android:text="@string/cancle_btn"
        android:textColor="@android:color/black"
        android:background="@color/backgroundGray"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>


</RelativeLayout>