<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">
    <TextView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_kategori_baru_pop_up"
        android:textSize="24sp"
        android:id="@+id/tv_kategori_sign"
        android:textColor="@android:color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_kategori_sign"
        android:layout_margin="16dp"
        android:id="@+id/et_kategori_kursus"
        android:inputType="textPersonName"
        android:hint="@string/kategori_hint"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_kategori_kursus"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_save_category"
        android:text="@string/simpan_kategori_btn"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_green_button"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</RelativeLayout>