<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_container_detail"
    tools:context=".view.activity.CourseActivityDetail">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/scrol_view"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/btn_layout"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/iv_gambar_khursus"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_nama_kursus"
                            android:text="@string/nama_kursus"
                            android:textAllCaps="true"
                            android:textSize="28sp"
                            android:layout_marginTop="16dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_kategori_khursus"
                            android:textAllCaps="true"
                            android:text="@string/kategori_kursus"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_harga_khursus"
                            android:text="@string/harga_kursus"
                            android:textSize="20sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:layout_marginTop="8dp"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:layout_marginBottom="8dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:padding="4dp"
                            android:textColor="@android:color/white"
                            android:background="@drawable/shape_gray_type_course"
                            android:id="@+id/tv_type_kursus"
                            android:text="@string/type_kursus"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_rating_khursus"
                            android:textAlignment="center"
                            android:drawableStart="@drawable/ic_baseline_star_24"
                            android:text="@string/rating_kursus"
                            android:textSize="24sp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:id="@+id/ll_mae_sign"
                            android:background="@color/backgroundGray"
                            android:padding="4dp"
                            android:visibility="gone"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_mae_khursus"
                                android:textAlignment="center"
                                android:text="@string/mea_sign"
                                android:textSize="24sp"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_mae_khursus_score"
                                android:textAlignment="center"
                                android:text="@string/mae_score"
                                android:textSize="24sp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shadow_background_blue"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_pemateri"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_union"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@android:color/white"
                            android:text="@string/pemater_sign"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/tv_pemateri_khursus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
                            android:layout_marginStart="16dp"
                            android:text="@string/nama_pemateri_kursus"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/tv_pemateri_master_khursus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@android:color/white"
                            android:text="@string/master_mentor"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:orientation="vertical">
                    <TextView
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_workshop"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textAllCaps="true"
                        android:layout_marginBottom="24dp"
                        android:id="@+id/tv_tanggal_workshop" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/deskripsi_sign"
                        android:textSize="16sp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/deskripsi_kursus_sign"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:id="@+id/tv_deskripsi_khursus"
                        android:text="@string/deskripsi_khursus"
                        android:layout_gravity="center_vertical|end"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/backgroundGray"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:id="@+id/btn_layout">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:id="@+id/btn_course"
                android:text="@string/belajar_btn"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/shape_green_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/btn_edit_photo"
                android:text="@string/edit_photo_btn"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/shape_line_button"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>