<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginVertical="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="16dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:background="@drawable/shape_line_button"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_corner"
        android:paddingBottom="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_pemateri"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_union"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_pemateri_khursus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="16dp"
                    android:text="@string/nama_pemateri_kursus"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/tv_pemateri_master_khursus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/master_mentor"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp"
            android:id="@+id/img_kursus"
            android:src="@drawable/ic_open_book"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nama_kursus"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_nama_kursus"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_kursus"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_kategori_kursus" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_kursus"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_harga_khursus"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_rating"
                    android:text="@string/rating_kursus"
                    android:drawableStart="@drawable/ic_baseline_star_24"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_weight="3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:textAllCaps="true"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/shape_gray_type_course"
                    android:id="@+id/tv_type_kursus"
                    android:text="@string/type_kursus"/>
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_workshop"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_tanggal_workshop" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>