<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@drawable/shadow_background"
    android:padding="12dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:src="@drawable/ic_union"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle"
                android:textAllCaps="true"
                android:layout_marginEnd="8dp"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:id="@+id/tv_list"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAllCaps="true"
                android:textSize="8sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:id="@+id/tv_clock"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textAllCaps="true"
            android:layout_marginTop="4dp"
            android:textSize="8sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tv_summary"/>

        <ImageView
            android:id="@+id/iv_reting"
            android:layout_width="48dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/rating"
            android:scaleType="fitXY"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_download"
        android:id="@+id/iv_download_user_list"/>
</LinearLayout>